--- a/index.html
+++ b/index.html
@@ -1,25 +1,30 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="stylesheet" href="CSS/pachong.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <meta charset="utf-8">
 <title>爬虫工作室</title>
 </head>
 
 <body>
-	<div class=“top”><!--顶栏-->
-		<div>
-			<a href="">首页</a>
+	<div class="top"><!--顶栏-->
+		<div class="container">
+		<div class="row center">
+			<div class="col-xs-3">
+				<a href="">首页</a>
+			</div>
+			<div class="col-xs-3">
+				<a href="">团队介绍</a>
+			</div>
+			<div class="col-xs-3">
+				<a href="">服务</a>
+			</div>
+			<div class="col-xs-3">
+				<a href="">联络方式</a>
+			</div>
 		</div>
-		<div>
-			<a href="">团队介绍</a>
-		</div>
-		<div>
-			<a href="">服务</a>
-		</div>
-		<div>
-			<a href="">联络方式</a>
-		</div>
+	</div>
 	</div>
 </body>
 </html>
