--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head lang="en">
-	<link rel="stylesheet" href="CSS/Untitled-1.css">
+	<link rel="stylesheet" href="css/pachong.css">
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
