--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head lang="en">
-	<link rel="stylesheet" href="css/pachong.css">
+	<link rel="stylesheet" href="CSS/Untitled-1.css">
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,27 +17,35 @@
 			<div class="row">
 				<div class="col-xs-6 col-sm-3" style="text-align: center;text-decoration: ">
 					<a href="#">
+						<img src="images/首页.png" alt="" style="width: 20px;height: 20px;margin: auto;">
 						首页
 					</a>
 				</div>
 				<div class="col-xs-6 col-sm-3" style="text-align: center">
 					<a href="#" style="">
+						<img src="images/团队.png" alt="" style="width: 20px;height: 20px;margin: auto;">
 						团队介绍
 					</a>
 				</div>
 				<div class="col-xs-6 col-sm-3" style="text-align: center">
 					<a href="#">
+						<img src="images/服务.png" alt="" style="width: 20px;height: 20px;margin: auto;">
 						服务
 					</a>
 				</div>
 				<div class="col-xs-6 col-sm-3" style="text-align: center">
 					<a href="#">
+						<img src="images/联系.png" alt="" style="width: 20px;height: 20px;margin: auto;">
 						联系方式
 					</a>
 				</div>
 			</div>
 		</div>
-		<div></div>
+		<div class="tupian">
+			<a href="#">
+				<img src="images/tupian-1.jpg" alt="">
+			</a>
+		</div>
 	</div>
 	
 	<!-- Optional JavaScript -->
