--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 				</div>
 			</div>
 		</div>
+		<div class="hello">
+			HELLO
+		</div>
 		<div class="tupian">
 			<a href="#">
 				<img src="images/tupian-1.jpg" alt="">
