--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</div>
 		<div class="tupian">
 			<a href="#">
-				<img src="images/tupian-1.jpg" alt="">
+				<img src="images/adam-mathieu-1337206-unsplash.jpg" alt="">
 			</a>
 		</div>
 	</div>
