--- a/index.html
+++ b/index.html
@@ -12,42 +12,56 @@
 </head>
 	
 <body>
-	<div class="container-fluid">
+	<div class="container-fluid" style="padding: 0;margin: 0;">
 		<div class="daohang">
 			<div class="row">
-				<div class="col-xs-6 col-sm-3" style="text-align: center;text-decoration: ">
-					<a href="#">
-						<img src="images/首页.png" alt="" style="width: 20px;height: 20px;margin: auto;">
-						首页
-					</a>
+				<div class="col-xs-2 col-sm-2" style="text-align: center;">
+					<div class="logo">LOGO</div>
 				</div>
-				<div class="col-xs-6 col-sm-3" style="text-align: center">
-					<a href="#" style="">
-						<img src="images/团队.png" alt="" style="width: 20px;height: 20px;margin: auto;">
-						团队介绍
-					</a>
-				</div>
-				<div class="col-xs-6 col-sm-3" style="text-align: center">
-					<a href="#">
-						<img src="images/服务.png" alt="" style="width: 20px;height: 20px;margin: auto;">
-						服务
-					</a>
-				</div>
-				<div class="col-xs-6 col-sm-3" style="text-align: center">
-					<a href="#">
-						<img src="images/联系.png" alt="" style="width: 20px;height: 20px;margin: auto;">
-						联系方式
-					</a>
-				</div>
+				<div class="col-xs-8 col-sm-8"></div>
+      			<div class="col-xs-2 col-sm-2" style="text-align: center;">
+					<div class="dropdown">
+    					<button type="button" class="btn dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" style="color: white;
+																														   font-size: 16px;">列表
+        					<span class="caret"></span>
+    					</button>
+    					<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+							<li role="presentation" class="divider"></li>
+        					<li role="presentation">
+            					<a role="menuitem" tabindex="-1" href="#">
+									<img src="images/团队.png" alt="" style="width: 20px;height: 20px;margin: auto;">
+									团队介绍
+								</a>
+        					</li>
+							<li role="presentation" class="divider"></li>
+        					<li role="presentation">
+            					<a role="menuitem" tabindex="-1" href="#">
+									<img src="images/服务.png" alt="" style="width: 20px;height: 20px;margin: auto;">
+									服务
+								</a>
+        					</li>
+							<li role="presentation" class="divider"></li>
+        					<li role="presentation">
+            					<a role="menuitem" tabindex="-1" href="#">
+									<img src="images/联系.png" alt="" style="width: 20px;height: 20px;margin: auto;">
+									联系方式
+								</a>
+        					</li>
+        					
+    					</ul>
+					</div>
+				</div>     
 			</div>
+		</div>
 		</div>
 		<div class="hello">
 			HELLO
 		</div>
-		<div class="tupian">
-			<a href="#">
-				<img src="images/adam-mathieu-1337206-unsplash.jpg" alt="">
-			</a>
+			<div class="tupian">
+				<a href="#">
+					<img src="images/adam-mathieu-1337206-unsplash.jpg" alt="">
+				</a>
+			</div>
 		</div>
 	</div>
 	
